# ColonySimulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ROADMAP.md  release.sh  run.sh
include/: Drawing.hpp  Island.hpp  Languages.hpp  Pathfinding.hpp  Perlin.hpp  Progress.hpp  Settings.hpp  Ship.hpp  UI.hpp  Utils.hpp
include/Drawing/: GameMenu.hpp  MainMenu.hpp  PauseMenu.hpp
resources/: CREDITS.md  Island.fs  Perlin.fs
resources/languages/: en.txt  pl.txt
resources/locales/: template.pot
resources/locales/en/LC_MESSAGES/: ColonySimulator.mo  ColonySimulator.po
resources/locales/pl/LC_MESSAGES/: ColonySimulator.mo  ColonySimulator.po
src/: Drawing.cpp  Human.cpp  Island.cpp  Languages.cpp  Pathfinding.cpp  Perlin.cpp  Progress.cpp  Raygui.cpp  Settings.cpp  Ship.cpp  UI.cpp  main.cpp
src/Drawing/: GameMenu.cpp  MainMenu.cpp  PauseMenu.cpp
